# component-compare

./: .gitignore  Cargo.toml  readme.md
client/rust/: Cargo.toml  build.rs
client/rust/src/: bindings.rs  bindings.txt  main.rs
cpp/: cpp.sln
cpp/client/: client.vcxproj  main.cpp
cpp/server/: Server.Reader.cpp  Server.Reader.h  Server.Writer.cpp  Server.Writer.h  pch.h  server.idl  server.vcxproj  server.vcxproj.filters  server_TemporaryKey.pfx
metadata/: Cargo.toml  build.rs  test.winmd
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/client/: Cargo.toml  build.rs
rust/client/src/: bindings.rs  bindings.txt
rust/server/: Cargo.toml  build.rs  test.winmd
rust/server/src/: bindings.rs  bindings.txt  lib.rs  metadata.idl
server/rust/: Cargo.toml  build.rs
server/rust/src/: bindings.txt  lib.rs
