[package]
name = "client"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies.windows-core]
version = "0.51"

[dependencies.windows]
version = "0.51"
features = [
    "implement",
    "Foundation",
    "Win32_Foundation",
]

[build-dependencies.windows-bindgen]
version = "0.51"

# Bug: https://github.com/rust-lang/cargo/issues/7825
[build-dependencies.server]
path = "../server"
