[package]
name = "server"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies.windows-core]
version = "0.51"

[dependencies.windows]
version = "0.51"
features = [
    "implement",
    "Foundation",
    "Win32_Foundation",
    "Win32_System_WinRT",
]

[build-dependencies.windows-bindgen]
version = "0.51"
